--- a/html/shell.html
+++ b/html/shell.html
@@ -1296,7 +1296,7 @@
     <script type="text/javascript">
         Module["noInitialRun"] = true;
         Module["arguments"] = ["-set", "machine=pc98", "-c", "mount d /data",
-                "-set", "mixer.nosound=true"];
+                "-set", "mixer nosound=true"];
     </script>
     <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="dosbox-x.js"></script>
