--- a/html/shell.html
+++ b/html/shell.html
@@ -1295,8 +1295,7 @@
     <!-- additional config -->
     <script type="text/javascript">
         Module["noInitialRun"] = true;
-        Module["arguments"] = ["-set", "machine=pc98", "-c", "mount d /data",
-                "-set", "mixer nosound=true"];
+        Module["arguments"] = ["-set", "machine=pc98", "-c", "mount d /data"];
     </script>
     <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="dosbox-x.js"></script>
